[package]
name = "llmtrain_monitor"
version = "0.1.0"
edition = "2021"
authors = ["Héctor Rodríguez <hectorp94@hotmail.com>"]
description = "A monitoring tool for LLM training processes"

[dependencies]
sysinfo = "0.28.2"
nvml-wrapper = "0.8.0"
clap = "3.2"
crossterm = "0.27"
regex = "1.5"
tui = { version = "0.19", default-features = false, features = ['crossterm'] }